<resources>
    <string name="app_name">Peduli Satwa Indonesia</string>
    <string name="detail_species">Species</string>
    <string name="detail_status">Status</string>
    <string name="overview">Overview</string>
    <string name="habitat">Habitat</string>
    <string name="habitat_detail">Habitat Detail</string>
    <string name="population">Populasi</string>
    <string name="population_detail">Population Detail</string>
    <string name="overview_detail">Overview Detail</string>
    <string name="poster">Poster</string>
    <string name="species">Species</string>
    <string name="animal_name">Animal Name</string>
    <string name="threat">Ancaman</string>
    <string name="login">DAFTAR HEWAN LANGKA</string>
    <string name="welcome">SELAMAT DATANG</string>
    <string name="home">Dengan adanya aplikasi ini diharapkan dapat meningkatkan kesadaran masyarakat Indonesia untuk menjaga dan melestarikan alam di Negara kita. Hewan dalam aplikasi ini merupakan hewan di Indonesia yang dikategorikan terancam punah oleh International Union for Conservation of Nature (IUCN) dan dilindungi berdasarkan Undang-undang Nomor 5 Tahun 1990 tentang Konservasi Sumber Daya Alam dan Ekosistemnya. </string>

    <string name="about">About</string>
    <string name="name_me">Muhammad Ichsan Razan</string>
    <string name="email_me">ichsanrazan33@gmail.com</string>
    <string name="check_instagram">Cek Instagram</string>
    <string name="change_language_settings">Language Settings</string>

    <string name="web">Informasi Lebih Lanjut</string>

</resources>