<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:textSize="34sp"
            app:contentScrim="?colorPrimary"
            app:expandedTitleMarginBottom="94dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="Title">

            <ImageView
                android:id="@+id/iv_detail"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/poster_hiugergaji"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:src="@drawable/image_front_shadow"
                tools:ignore="ContentDescription" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@null"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/abc_ic_ab_back_material" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:behavior_overlapTop="78dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:contentPaddingBottom="16dp"
                app:contentPaddingLeft="16dp"
                app:contentPaddingRight="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_detail_species"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/detail_species"
                        android:textColor="@android:color/primary_text_dark"
                        android:textSize="16sp"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_detail_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/detail_status"
                        android:textColor="@android:color/primary_text_dark"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_detail_species" />

                    <TextView
                        android:id="@+id/tv_detail_population_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center_vertical"
                        android:minHeight="32dp"
                        android:text="@string/population"
                        android:textAllCaps="true"
                        android:textColor="@android:color/primary_text_dark"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_status" />

                    <TextView
                        android:id="@+id/tv_detail_population"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:lineSpacingExtra="4dp"
                        android:text="@string/population_detail"
                        android:textColor="@android:color/secondary_text_dark"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_population_title" />

                    <TextView
                        android:id="@+id/tv_detail_overview_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center_vertical"
                        android:minHeight="32dp"
                        android:text="@string/overview"
                        android:textAllCaps="true"
                        android:textColor="@android:color/primary_text_dark"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_population" />

                    <TextView
                        android:id="@+id/tv_detail_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:lineSpacingExtra="4dp"
                        android:text="@string/overview_detail"
                        android:textColor="@android:color/secondary_text_dark"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_overview_title" />

                    <TextView
                        android:id="@+id/tv_detail_habitat_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center_vertical"
                        android:minHeight="32dp"
                        android:text="@string/habitat"
                        android:textAllCaps="true"
                        android:textColor="@android:color/primary_text_dark"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_overview" />

                    <TextView
                        android:id="@+id/tv_detail_habitat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:lineSpacingExtra="4dp"
                        android:text="@string/habitat_detail"
                        android:textColor="@android:color/secondary_text_dark"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_habitat_title" />

                    <TextView
                        android:id="@+id/tv_detail_threat_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center_vertical"
                        android:minHeight="32dp"
                        android:text="@string/threat"
                        android:textAllCaps="true"
                        android:textColor="@android:color/primary_text_dark"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_habitat" />

                    <TextView
                        android:id="@+id/tv_detail_threat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:lineSpacingExtra="4dp"
                        android:text="@string/habitat_detail"
                        android:textColor="@android:color/secondary_text_dark"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_threat_title" />

                    <ImageView
                        android:id="@+id/iv_backdrop"
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:scaleType="fitCenter"
                        android:clickable="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_threat"
                        app:layout_constraintVertical_bias="0.382"
                        tools:srcCompat="@drawable/map_badakjawa"
                        android:focusable="true" />

                    <Button
                        android:id="@+id/btn_web"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/web"
                        android:letterSpacing=".125"
                        android:backgroundTint="@color/dark"

                        app:layout_constraintEnd_toEndOf="@+id/iv_backdrop"
                        app:layout_constraintStart_toStartOf="@+id/iv_backdrop"
                        app:layout_constraintTop_toBottomOf="@+id/iv_backdrop" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:src="@drawable/location_24"
        app:tint="@color/white"
        app:backgroundTint="@color/dark"
        app:layout_anchor="@id/card_detail"
        app:layout_anchorGravity="bottom|right|end"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>